@@ -15,7 +15,7 @@ class MyCustomPage(HTML5Page):
                                        ('main', UnitSize('3/4'))).with_slots()
         self.use_layout(PageLayout(contents_layout))
 
-        menu = Menu(view, [], layout=HorizontalLayout()).with_bookmarks(bookmarks)
+        menu = Menu(view, layout=HorizontalLayout()).with_bookmarks(bookmarks)
         self.layout.header.add_child(menu)
 
 
